[tool.poetry]
name = "testing-docs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.48"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
